--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <!--<script src="js/wow.min.js"></script>-->
     <script>
         new WOW().init();
     </script>
@@ -59,7 +59,8 @@
                 <h1>Нас не надо доставать, нам еще ЕГЭ сдавать!</h1>
                 <p>Здесь учащиеся смогут делиться своими проектами</p>
                 <div class="buttons">
-                    <button class="watchPrj" onclick="location.href='https://docs.google.com/document/d/1gnChG1KEKOzlujvR7iUG194S_5M6iL_jt6brHroi2OM/edit'">Поделиться</button>
+                    <button class="watchPrj"
+                        onclick="location.href='https://docs.google.com/document/d/1gnChG1KEKOzlujvR7iUG194S_5M6iL_jt6brHroi2OM/edit'">Поделиться</button>
                 </div>
             </div>
             <div class="header__block wow slideInRight" data-wow-duration="1s" data-wow-offset='100'>
@@ -75,14 +76,18 @@
                 <p>3 простых шага</p>
             </div>
             <div class="prompt__steps">
-                <div class="prompt__step prompt__step-1 wow slideInRight" data-wow-offset='200' data-wow-duration="0.5s">
+                <div class="prompt__step prompt__step-1 wow slideInRight" data-wow-offset='200'
+                    data-wow-duration="0.5s">
                     <h3>Нажать кнопку</h3><button class="btndsbld" disabled="true">Поделиться</button>
 
                 </div>
-                <div class="prompt__step prompt__step-2 wow slideInRight" data-wow-offset='200' data-wow-duration="0.5s">
-                    <h3>В гугл документе запросить права на редактирование (ФИО уч.)</h3><img src="img/blank.svg" alt="">
+                <div class="prompt__step prompt__step-2 wow slideInRight" data-wow-offset='200'
+                    data-wow-duration="0.5s">
+                    <h3>В гугл документе запросить права на редактирование (ФИО уч.)</h3><img src="img/blank.svg"
+                        alt="">
                 </div>
-                <div class="prompt__step prompt__step-3 wow slideInRight" data-wow-offset='200' data-wow-duration="0.5s">
+                <div class="prompt__step prompt__step-3 wow slideInRight" data-wow-offset='200'
+                    data-wow-duration="0.5s">
                     <h3>Когда права даны, вписать в таблицу необходимую инф.</h3><img src="img/pen.svg" alt="">
                 </div>
             </div>
@@ -130,7 +135,8 @@
             <div class="share__main wow slideInRight" data-wow-duration="0.5s" data-wow-offset='200'>
                 <h2>Ученики под конец года должны выставить свои проекты</h2>
                 <p>просмотреть пошаговую инструкцию как поделиться проектом можно выше</p>
-                <button class="watchPrj" onclick="location.href='https://docs.google.com/document/d/1gnChG1KEKOzlujvR7iUG194S_5M6iL_jt6brHroi2OM/edit'">Поделиться</button>
+                <button class="watchPrj"
+                    onclick="location.href='https://docs.google.com/document/d/1gnChG1KEKOzlujvR7iUG194S_5M6iL_jt6brHroi2OM/edit'">Поделиться</button>
             </div>
             <div class="share__img wow slideInLeft" data-wow-duration="1s" data-wow-offset='200'>
                 <img src="img/schoolboy.svg" alt="">
