--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
-    <!--<script src="js/wow.min.js"></script>-->
+    <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
